[metadata]
name = pyyso
version = 0.0.10
author = greyclick
author_email = cokeBeer@github.com
description = a java serialized tool written in python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/cokeBeer/pyyso/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = pycrypto

[options.packages.find]
where = src